--- a/projetos pessoais git/index.html
+++ b/projetos pessoais git/index.html
@@ -7,8 +7,9 @@
 </head>
 <body>
     <header>
-        <h1></h1>
-        <p></p>
+        <h1>Portal TEOSIRA</h1>
+        <p>Teologia Simples & Rápida</p>
+        <p class="p1">Por: Victor Soares</p>
 
     </header>
     <nav>
