--- a/projetos pessoais git/index.html
+++ b/projetos pessoais git/index.html
@@ -10,25 +10,32 @@
         <h1>Portal TEOSIRA</h1>
         <p>Teologia Simples & Rápida</p>
         <p class="p1">Por: Victor Soares</p>
-
     </header>
     <nav>
-
+        <a href="#">Home</a>
+        <a href="#">Livros</a>
+        <a href="#">Artigos</a>
+        <a href="#">Estudos</a>
     </nav>
     <main>
         <article>
-            <h1></h1>
-            <p></p>
+
+
+            <h1>Sobre a Bíblia e a Teologia</h1>
+            <p>Não existe Teologia sem bíblia. Esta é a primeira afirmação que nós podemos fazer de forma plena e correta. Quando o homem tenta realizar essa afirmação, ele se depara inevitavelmente com dois resultados: 1 - Ele está no primeiro degrau da busca por Deus de forma simples e 'inocente' (A chamada 'revelação geral'), ou 2 - Ele está condenado ao inferno de forma consciente e voluntária, deturpando o conceito de Deus e amoldando esse conceito a seu próprio interesse (2Tm 3:2-8). Oxalá a todos fosse verdadeiro esse conceito, certamente não teríamos tantas mentiras, falsos ensinos e heresias correndo soltas aí fora. É isso que precisamos ter em mente nestes tempos. Que possamos meditar na palavra do Senhor, e que seus 2 testamentos, 66 livros, 1.189 capítulos, 31.102 versículos, e suas (cerca de) 3 milhões de letras, possam iluminar seu caminho rumo ao conhecimento da glória de Deus por meio da obra de seu filho, o qual era, é e há de vir. Sola Scriptura!</p>
             <div class="video">
 
             </div>
             <aside>
-                <h2></h2>
-                <p></p>
+                <h2>Sobre o Autor</h2>
+                <p>Victor Soares é natural de Carpina-PE. Nascido em 1992, com 10 anos de idade aceitou a Cristo como salvador, mas foi somente a partir de 2012, na Igreja Congregacional de Carpina que tomou gosto por teologia, iniciando sua jornada de estudos nesta área. Em 2018, já membro da Igreja OBPC, realizou sua formação missionária e linguística no órgão de missões na referida denominação, aonde assumiu posteriormente em 2020, a função de coordenador durante cinco anos. Possui experiência em estudos culturais e missiológicos em 9 países, período este no qual estudou grego bíblico do NT e apologética. Atualmente, é aluno de graduação no curso de Engenharia de Software. É casado há 3 anos com Gerciana, aficionado por cultura, filosofia e tecnologia.</p>
+
+                <img src="#" alt="">
             </aside>
 
         </article>
     </main>
+    <footer>Site criado por Victor Soares para prática pessoal.</footer>
     
 </body>
 </html>
