--- a/projetos pessoais git/index.html
+++ b/projetos pessoais git/index.html
@@ -34,15 +34,22 @@
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/QomA56s4l9E?si=vQTXt3-9qKn23Xgf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
 
-            <aside>
-                <h2>Sobre o Autor</h2>
-                <p>Victor Soares é natural de Carpina-PE. Nascido em 1992, com 10 anos de idade aceitou a Cristo como salvador, mas foi somente a partir de 2012, na Igreja Congregacional de Carpina que tomou gosto por teologia, iniciando sua jornada de estudos nesta área. Em 2018, já membro da Igreja OBPC, realizou sua formação missionária e linguística no órgão de missões na referida denominação, aonde assumiu posteriormente em 2020, a função de coordenador durante cinco anos. Possui experiência em estudos culturais e missiológicos em 9 países, período este no qual estudou grego bíblico do NT e apologética. Atualmente, é aluno de graduação no curso de Engenharia de Software. É casado há 3 anos com Gerciana, aficionado por cultura, filosofia e tecnologia.</p>
-
-                <picture>
-                    <source media="(max-width: 680px)" srcset="/images/img02-pq.png">
-                    <img src="images/img02.png" alt="Imagem de victor soares em pulpito">
-                </picture>
-            </aside>
+            
+                <aside>
+                    <h2>Sobre o Autor</h2>
+                    <div class="autor">
+                        <div class="descricao">
+                            <p>Victor Soares é natural de Carpina-PE. Nascido em 1992, com 10 anos de idade aceitou a Cristo como salvador, mas foi somente a partir de 2012, na Igreja Congregacional de Carpina que tomou gosto por teologia, iniciando sua jornada de estudos nesta área. Em 2018, já membro da Igreja OBPC, realizou sua formação missionária e linguística no órgão de missões na referida denominação, aonde assumiu posteriormente em 2020, a função de coordenador durante cinco anos. Possui experiência em estudos culturais e missiológicos em 9 países, período este no qual estudou grego bíblico do NT e apologética. Atualmente, é aluno de graduação no curso de Engenharia de Software. É casado há 3 anos com Gerciana, aficionado por cultura, filosofia e tecnologia.</p>
+                        </div>
+                        <div class="foto">
+                            <picture>
+                                <source media="(max-width: 680px)" srcset="/images/img02-pq.png">
+                                <img class="perfil" src="images/img02.png" alt="Imagem de victor soares em pulpito">
+                            </picture>
+                        </div>
+                    </div>
+                </aside>
+            
 
         </article>
     </main>
