--- a/projetos pessoais git/page02.html
+++ b/projetos pessoais git/page02.html
@@ -16,8 +16,8 @@
     <nav>
         <a href="index.html" rel="prev" target="_self">Home</a>
         <a href="page02.html" target="_self">Livros</a>
-        <a href="#">Artigos</a>
-        <a href="#">Estudos</a>
+        <a href="page03.html" rel="next" target="_self">Artigos</a>
+        <a href="page04.html" rel="next" target="_self">Estudos</a>
     </nav>
     <main>
         <article>
@@ -57,7 +57,7 @@
             <p class="return">Voltar para <a href="index.html">Home</a></p>
         </article>
     </main>
-    <footer>Site criado por Victor Soares para prática pessoal.</footer>
+    <footer>Site criado por <a href="https://www.instagram.com/victor.soares.02/" rel="external" target="_blank">Victor Soares</a> para prática pessoal.</footer>
     
 </body>
 </html>
