--- a/projetos pessoais git/page04.html
+++ b/projetos pessoais git/page04.html
@@ -21,7 +21,7 @@
     </nav>
     <main>
         <article>
-            <h1>Artigos</h1>
+            <h1>Estudos</h1>
             <p><strong>Ops... ainda não atualizei esta parte. Mas em breve, disponibilizarei aqui estudos teológicos diversos. Aguardem!</strong></p>
 
             
