--- a/projetos pessoais git/page03.html
+++ b/projetos pessoais git/page03.html
@@ -32,6 +32,16 @@
                     </div>                  
                 </div>
             </div>
+            <div>
+                <div class="artigos">
+                    <img class="art-foto" src="images/biblia.jpg" alt="Bíblia">
+                    <div>
+                        <p class="p1"><strong>A importância de estudar a história além da Bíblia</strong></p>
+                        <p class="p2"><em>Artigo escrito por <strong>Emily dos Santos Domingues</strong> em 31/07/2025</em></p>
+                        <a href="art01.html" target="_self"><em>Ler artigo</em></a>
+                    </div>                  
+                </div>
+            </div>
             <p class="return">Voltar para <a href="index.html">Home</a></p>
         </article>
     </main>
