--- a/projetos pessoais git/page03.html
+++ b/projetos pessoais git/page03.html
@@ -34,11 +34,11 @@
             </div>
             <div>
                 <div class="artigos">
-                    <img class="art-foto" src="images/biblia.jpg" alt="Bíblia">
+                    <img class="art-foto" src="images/art02.jpg" alt="humano e divino">
                     <div>
-                        <p class="p1"><strong>A importância de estudar a história além da Bíblia</strong></p>
-                        <p class="p2"><em>Artigo escrito por <strong>Emily dos Santos Domingues</strong> em 31/07/2025</em></p>
-                        <a href="art01.html" target="_self"><em>Ler artigo</em></a>
+                        <p class="p1"><strong>Abordagem cultural: Válida ou Perigosa?</strong></p>
+                        <p class="p2"><em>Artigo escrito por <strong>Victor Soares</strong> em 08/08/2025</em></p>
+                        <a href="art02.html" target="_self"><em>Ler artigo</em></a>
                     </div>                  
                 </div>
             </div>
